--- a/hoopTests/Info.plist
+++ b/hoopTests/Info.plist
@@ -18,5 +18,25 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb980312175433785</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>980312175433785</string>
+    <key>FacebookDisplayName</key>
+    <string>hoop - smallTest</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
