--- a/hoop/Info.plist
+++ b/hoop/Info.plist
@@ -65,5 +65,25 @@
 		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb980312175433785</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>980312175433785</string>
+    <key>FacebookDisplayName</key>
+    <string>hoop - smallTest</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
