--- a/hoop/Info.plist
+++ b/hoop/Info.plist
@@ -16,21 +16,30 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>980312175433785</string>
+	<key>FacebookAppID - prod</key>
+	<string>978884298909906</string>
+	<key>AccountKitClientToken</key>
+	<string>c6fe92c60dd3ae6e31c750872f60c2d2</string>
+	<key>AccountKitClientToken - prod</key>
+	<string>1ca090c0bd44e07714dce658c667fe45</string>
+	<key>FacebookDisplayName</key>
+	<string>hoop</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb980312175433785</string>
+				<string>ak980312175433785</string>
+				<string>fb978884298909906</string>
+				<string>ak978884298909906</string>
 			</array>
 		</dict>
 	</array>
-	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>FacebookAppID</key>
-	<string>980312175433785</string>
-	<key>FacebookDisplayName</key>
-	<string>hoop - smallTest</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
